[gd_scene load_steps=16 format=3 uid="uid://bcv4uskbdioee"]

[ext_resource type="PackedScene" uid="uid://dj4u2qb6odmb3" path="res://scenes/entities/emeies/enemy.tscn" id="1_ntcdy"]
[ext_resource type="PackedScene" uid="uid://bks0ynvp57mq1" path="res://graphics/characters/skeleton warrior/Skeleton_Warrior.glb" id="2_0uhqy"]
[ext_resource type="Script" path="res://scenes/entities/emeies/skeleton_warrior.gd" id="2_gm88v"]
[ext_resource type="PackedScene" uid="uid://14kxtacijetc" path="res://scenes/entities/emeies/bone.tscn" id="4_xg424"]
[ext_resource type="PackedScene" uid="uid://dydnnq3ww2uyk" path="res://graphics/weapons/shield.gltf.glb" id="5_bx4sk"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rkifn"]
radius = 0.380623
height = 2.3043

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hu53v"]
animation = &"1H_Melee_Attack_Chop"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dsnyf"]
animation = &"2H_Melee_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_riny1"]
animation = &"Walking_B"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vwo8w"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_38o4m"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xtfbt"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_i775i"]
states/idle/node = SubResource("AnimationNodeAnimation_dsnyf")
states/idle/position = Vector2(359.5, 114)
states/walk/node = SubResource("AnimationNodeAnimation_riny1")
states/walk/position = Vector2(627.5, 119.5)
transitions = ["idle", "walk", SubResource("AnimationNodeStateMachineTransition_vwo8w"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_38o4m"), "Start", "idle", SubResource("AnimationNodeStateMachineTransition_xtfbt")]

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_64edx"]
fadein_time = 0.2
fadeout_time = 0.3

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_ldcd2"]
graph_offset = Vector2(-217.262, -5.58092)
nodes/AttackAnimation/node = SubResource("AnimationNodeAnimation_hu53v")
nodes/AttackAnimation/position = Vector2(190, 180)
nodes/MoveStateMachine/node = SubResource("AnimationNodeStateMachine_i775i")
nodes/MoveStateMachine/position = Vector2(230, 30)
nodes/OneShot/node = SubResource("AnimationNodeOneShot_64edx")
nodes/OneShot/position = Vector2(460, 40)
nodes/output/position = Vector2(610, 60)
node_connections = [&"OneShot", 0, &"MoveStateMachine", &"OneShot", 1, &"AttackAnimation", &"output", 0, &"OneShot"]

[node name="Skeleton_warrior" instance=ExtResource("1_ntcdy")]
script = ExtResource("2_gm88v")
attack_radius = 1.5

[node name="CollisionShape3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.20139, 0)
shape = SubResource("CapsuleShape3D_rkifn")

[node name="AnimationTree" parent="." index="1"]
root_node = NodePath("../skin")
tree_root = SubResource("AnimationNodeBlendTree_ldcd2")
anim_player = NodePath("../skin/AnimationPlayer")
parameters/OneShot/active = false
parameters/OneShot/internal_active = false
parameters/OneShot/request = 0

[node name="Timer" parent="Timers" index="0"]
wait_time = 2.5

[node name="skin" parent="." index="3" instance=ExtResource("2_0uhqy")]

[node name="Skeleton3D" parent="skin/Rig" index="0"]
bones/1/position = Vector3(0.00841076, 0.366432, 1.21849e-10)
bones/2/rotation = Quaternion(-0.0605995, -0.130282, -0.00797808, 0.989591)
bones/3/rotation = Quaternion(0.0222941, 0.000728882, -0.00592905, 0.999734)
bones/3/scale = Vector3(1, 1, 1)
bones/4/position = Vector3(0.248044, 0.110857, 0.0825816)
bones/4/rotation = Quaternion(-0.586941, -0.24563, -0.720114, 0.276771)
bones/4/scale = Vector3(1, 0.999999, 1)
bones/5/rotation = Quaternion(3.03344e-08, -3.38593e-08, -0.593922, 0.804522)
bones/6/rotation = Quaternion(1.10745e-08, -5.13173e-13, 0.0266581, 0.999645)
bones/7/rotation = Quaternion(-0.161977, -0.693067, -0.0524747, 0.700477)
bones/8/position = Vector3(8.34836e-10, 0.0961252, -0.0575001)
bones/8/rotation = Quaternion(-6.29278e-09, 4.24393e-09, -0.707107, 0.707107)
bones/9/position = Vector3(-0.176682, 0.111703, 0.0891542)
bones/9/rotation = Quaternion(-0.257083, 0.375236, 0.829118, 0.325068)
bones/9/scale = Vector3(1, 0.999999, 1)
bones/10/rotation = Quaternion(7.65278e-09, 4.6175e-08, 0.546457, 0.837488)
bones/11/rotation = Quaternion(-7.94255e-09, -1.43988e-08, -0.0266581, 0.999645)
bones/12/rotation = Quaternion(-0.261325, 0.200448, -0.0788083, 0.940914)
bones/13/position = Vector3(-8.34829e-10, 0.0961251, -0.0574999)
bones/13/rotation = Quaternion(0.155711, -0.189455, 0.670289, 0.700409)
bones/13/scale = Vector3(1, 1, 1)
bones/14/rotation = Quaternion(0.0710512, 0.130495, 0.0139573, 0.988801)
bones/16/position = Vector3(0.170945, 0.113587, 1.39233e-08)
bones/16/rotation = Quaternion(0.990979, 0.0749545, 0.0408997, 0.103297)
bones/17/rotation = Quaternion(0.42533, 6.09291e-08, -2.90165e-07, 0.905038)
bones/18/rotation = Quaternion(-0.631657, -0.209832, 0.0676653, 0.743237)
bones/19/rotation = Quaternion(-8.84429e-06, 0.92011, -0.391659, 1.89531e-06)
bones/20/rotation = Quaternion(0.987291, -0.0403589, -0.0126898, 0.153189)
bones/21/rotation = Quaternion(0.457784, -6.10993e-08, 3.17974e-07, 0.889064)
bones/22/rotation = Quaternion(-0.640166, 0.110339, -0.0348907, 0.759471)
bones/23/rotation = Quaternion(2.32995e-06, 0.920117, -0.391643, -4.23396e-08)
bones/24/rotation = Quaternion(0.707107, -2.29302e-07, -4.60552e-08, 0.707107)
bones/25/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/26/position = Vector3(0.0308395, 0.382458, -2.86687e-15)
bones/26/rotation = Quaternion(1.00138e-08, 1.91522e-09, 0.984639, -0.174603)
bones/27/position = Vector3(3.75295e-09, 0.213436, -1.0343e-08)
bones/27/rotation = Quaternion(-9.99889e-08, 0.391084, 0.920355, -3.39507e-08)
bones/28/position = Vector3(2.3491e-08, 0.16565, -5.09136e-09)
bones/28/rotation = Quaternion(-0.391084, -6.59362e-08, -5.87716e-08, 0.920355)
bones/29/rotation = Quaternion(1, 2.30261e-09, 1.93335e-07, -4.39844e-16)
bones/30/rotation = Quaternion(-6.93878e-18, -9.55588e-16, -1.20164e-08, 1)
bones/31/rotation = Quaternion(0.707107, -3.82385e-08, 1.45009e-07, 0.707107)
bones/32/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/33/rotation = Quaternion(-5.83589e-09, 6.43837e-10, 0.994809, 0.101756)
bones/34/position = Vector3(-1.11482e-08, 0.213436, -2.50942e-15)
bones/34/rotation = Quaternion(-1.05796e-07, 0.391084, 0.920355, -2.58643e-08)
bones/35/position = Vector3(-6.31128e-09, 0.16565, 2.70695e-09)
bones/35/rotation = Quaternion(-0.391084, -6.73931e-08, -6.22002e-08, 0.920355)
bones/36/rotation = Quaternion(1, 3.76526e-09, 1.94879e-07, 7.45058e-09)
bones/37/rotation = Quaternion(1.00614e-16, -6.74098e-17, -1.57416e-08, 1)
bones/38/position = Vector3(0.839842, 0.719866, -0.447558)
bones/38/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/39/position = Vector3(0.342396, 0.804217, 0.400298)
bones/39/rotation = Quaternion(0.62459, 0.0718287, 0.441349, 0.640265)
bones/39/scale = Vector3(1, 1, 1)
bones/40/position = Vector3(-0.87741, 1.03555, -0.447559)
bones/40/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/41/position = Vector3(-0.353608, 0.819453, 0.286965)
bones/41/rotation = Quaternion(0.304933, -0.224428, -0.913367, 0.149695)

[node name="Skeleton_Warrior_Helmet" parent="skin/Rig/Skeleton3D" index="0"]
transform = Transform3D(0.999893, -0.0145316, 0.00132488, 0.0145871, 0.997756, -0.0653368, -0.000372529, 0.0653492, 0.997863, 0.0291129, 1.17307, -0.0651998)

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="skin/Rig/Skeleton3D" index="10"]
transform = Transform3D(-0.198496, 0.797286, -0.57003, -0.612902, 0.352877, 0.706985, 0.76482, 0.489707, 0.418614, -0.302817, 0.683798, 0.359035)
bone_name = "handslot.r"
bone_idx = 13

[node name="bone" parent="skin/Rig/Skeleton3D/BoneAttachment3D" index="0" instance=ExtResource("4_xg424")]
transform = Transform3D(0.986038, -0.0772623, -0.147532, 0.126306, 0.924324, 0.360105, 0.108544, -0.373709, 0.921174, 0.0164925, 0.201742, -0.00497639)

[node name="BoneAttachment3D2" type="BoneAttachment3D" parent="skin/Rig/Skeleton3D" index="11"]
transform = Transform3D(0.475414, 0.60012, 0.643301, 0.169784, 0.65489, -0.736404, -0.863223, 0.45932, 0.209453, 0.247577, 0.809423, 0.541039)
bone_name = "handslot.l"
bone_idx = 8

[node name="shield_gltf" parent="skin/Rig/Skeleton3D/BoneAttachment3D2" index="0" instance=ExtResource("5_bx4sk")]
transform = Transform3D(0.622471, 0.685575, -0.377514, -0.0482315, 0.515044, 0.855806, 0.781155, -0.514507, 0.353666, -0.0311378, 0.0601841, 0.0540059)

[connection signal="timeout" from="Timers/Timer" to="." method="_on_timer_timeout"]

[editable path="skin"]
